# TG_Service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.local copy.yaml  docker-compose.server.yaml  docker-compose.yaml  main.py  pyproject.toml
app/: config.py  exceptions.py
app/bot/: bot.py
app/broker/: __init__.py  app.py  messages.py
app/callbacks_factory/: base.py
app/db/: __init__.py  base.py  connection.py
app/handlers/: __init__.py  community.py  model.py  quiz.py  start.py  user.py
app/keyboards/: community.py  quiz.py  start.py  user.py
app/middlewares/: album.py
app/models/: __init__.py  community.py  profile.py  quiz.py  result.py
app/s3/: s3_client.py
app/schemas/: quiz.py
app/states/: community.py  model.py  quiz.py
app/types/: album.py
migrations/: env.py
migrations/versions/: 6048a45833bd_added_quiz_table.py  62289925fa14_init_migration.py  7d9d4c1d1e03_init.py  b9bd8b855165_init_migration.py
